# git-workflow-tutorial

./: .gitignore  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh  shell-env.sh
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: backport.md
.github/workflows/: cd-dev.yml  ci.yml  pr-label.yml  release-ga.yml  release-rc.yml  rollback.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/tests/: test_version.py
docs/: 00-setup.md  01-feature-flow.md  02-guardrails.md  03-release.md  04-backport.md  05-advanced.md  90-admin.md  99-cleanup.md  README.md
docs/assets/: setup-policy-oidc-create.json  setup-policy.json  setup-policy.template.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: gen-version.mjs
frontend/src/: App.tsx  styles.css
scripts/: apply-setup-policy.sh  bootstrap-image.sh  check-aws-permissions.sh  create-participants.sh  gen-setup-policy.sh  setup-github.sh  sync-github-vars.sh
scripts/lib/: naming.sh  preflight.sh
terraform/: cloudfront.tf  ecr.tf  lambda.tf  main.tf  oidc.tf  outputs.tf  s3.tf  variables.tf
