[project]
name = "backend"
version = "0.0.0" # バージョンはここではなく Git タグで管理する (ビルド時に焼き込み)
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# app/ は配布パッケージではなく、cwd 経由で import される (Dockerfile も同様)。
# pytest にも同じ import 環境を与える。
pythonpath = ["."]
